samples/_failures_safe/1761128033_9bafb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c96248c4.c: In function ‘state_writing_action’:
./samples/SAFE/__tmp_c96248c4.c:144:5: error: expected declaration or statement at end of input
  144 |     memset(ctx->input_buffer, 0, sizeof(ctx->input_buffer));
      |     ^~~~~~
